--- a/css/style.css
+++ b/css/style.css
@@ -87,9 +87,6 @@ body {
 }
 .menu__list {
 }
-.menu__list > *:not(:last-child) {
-	margin: 0px 33px 0px 0px;
-}
 .menu__link {
 	font-weight: 500;
 	font-size: 20px;
@@ -107,21 +104,26 @@ body {
 		align-items: center;
 		justify-content: end;
 	}
+	.menu__list > *:not(:last-child) {
+		margin: 0px 33px 0px 0px;
+	}
 	.menu__list {
 		margin-right: -89px;
-		padding: 0px 15px 0px 0px;
 		display: flex;
+	}
+	.menu__list:not(:last-child) {
+		padding: 0px 15px 0px 0px;
 	}
 }
 @media (max-width: 1050px) {
 	.menu__list {
 		margin-right: 0px;
 	}
+}
+@media (max-width: 767px) {
 	.menu__list > *:not(:last-child) {
 		margin: 0px 0px 30px 0px;
 	}
-}
-@media (max-width: 767px) {
 	.menu__icon {
 		z-index: 5;
 		display: flex;
