--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,9 @@ body {
 	font-weight: 500;
 	font-family: Heebo;
 }
+body._lock {
+	overflow: hidden;
+}
 .wrapper {
 	min-height: 100%;
 	overflow: hidden;
@@ -97,7 +100,7 @@ body {
 	text-decoration: underline;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 469px) {
 	.header__container {
 		min-height: 80px;
 		display: flex;
@@ -120,7 +123,7 @@ body {
 		margin-right: 0px;
 	}
 }
-@media (max-width: 767px) {
+@media (max-width: 469px) {
 	.menu__list > *:not(:last-child) {
 		margin: 0px 0px 30px 0px;
 	}
@@ -132,7 +135,7 @@ body {
 		width: 30px;
 		height: 22px;
 		cursor: pointer;
-		margin: 30px 0px 20px 0px;
+		margin: 20px 0px 20px 0px;
 	}
 	.menu__icon span,
 	.menu__icon::before,
@@ -156,18 +159,45 @@ body {
 	}
 	.menu__icon span {
 		top: 50%;
-		transform: scale(1) translate(0px -50%);
+		transform: scale(1) translate(0px, -50%);
 	}
+
+	.menu__icon._active span {
+		transform: scale(0) translate(0px, -50%);
+	}
+	.menu__icon._active::before {
+		top: 50%;
+		transform: rotate(-45deg) translate(0px, -50%);
+	}
+	.menu__icon._active::after {
+		bottom: 50%;
+		transform: rotate(45deg) translate(0px, 50%);
+	}
+
 	.menu__body {
 		position: fixed;
 		top: 0;
-		left: 0;
+		left: -100%;
 		width: 100%;
 		height: 100%;
 		background: rgba(245, 245, 245, 0.8);
 		padding: 100px 30px 30px 30px;
 		transition: all 0.3s ease 0s;
+		overflow: auto;
 	}
+	.menu__body._active {
+		left: 0;
+	}
+	/* .menu__body::before {
+		content: "";
+		position: fixed;
+		width: 100%;
+		top: 0;
+		left: 0;
+		height: 70px;
+		background-color: rgb(182, 182, 182);
+		z-index: 2;
+	} */
 }
 /*---page----------------------------------------------------------------------------------*/
 .page {
